<resources>
    <string name="app_name">THP Fitness Demo</string>

    <string name="edit_text_field_required">Required Field</string>
    <string name="edit_text_username_taken">Username already taken!</string>

    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="edit_text_no_such_username">username does not exist</string>
    <string name="edit_text_incorrect_password">Incorrect password!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Log Out</string>
    <string name="step_counting_notification_text">Tracking...</string>
    <string name="milestone_text">%1$s just walked %2$d feet!</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="walking_reminder">Walking Reminder</string>
    <string name="walking_reminder_message">Stand up and go walk!</string>
    <string name="sensor_lacking_message">Your device lacks the hardware step sensor necessary for this app. It may not work as intended</string>
    <string name="daily_stats_title">"%1$s 's daily stats for %2$s</string>
    <string name="nothing_logged">Nothing logged yet.</string>
    <string name="steps_taken">%1$d Steps</string>
    <string name="distance_walked_meter">%1$s Meters</string>
    <string name="distance_walked_feet">%1$s Feet</string>
    <string name="step_log_entry">%1$s: %2$s Steps, %3$s Meters, %4$s Feet</string>
    <string name="leaderboard_entry">%1$d: %2$s, %3$s Meters, %4$s Feet</string>
    <string name="milestone_title">New Milestone Achieved!</string>
    <string name="step_stats_label">Past Record:</string>
    <string name="daily_leaderboard_title">Daily Leaderboard</string>
    <string name="login_page_title">Fitness Application</string>
    <string name="username_field">username</string>
    <string name="password_field">password</string>
    <string name="login_button_text">Login</string>
    <string name="new_user_button_text">New User</string>
    <string name="height_field">height (centimeters)</string>
    <string name="submit_button_text">Submit</string>
    <string name="new_user_title">New User Signup</string>
</resources>
