<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.yuesaka.com.thehumanprojectfitnessapp.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:text="@string/login_page_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="40dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:nextFocusDown="@+id/password"
        android:singleLine="true"
        android:layout_marginTop="60dp"
        android:typeface="monospace"
        android:hint="@string/username_field"
        android:textSize="20dp"
        android:layout_below="@+id/titleText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:id="@+id/password"
        android:singleLine="true"
        android:layout_marginTop="60dp"
        android:hint="@string/password_field"
        android:textSize="20dp"
        android:password="true"
        android:inputType="textNoSuggestions"
        android:layout_below="@+id/username"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_button_text"
        android:id="@+id/new_user_button"
        android:layout_below="@+id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="20dp" />

</RelativeLayout>
